updating cv, index and theme

--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ gems:
   - jekyll-seo-tag
   - jekyll-sitemap
   - jekyll-paginate
-feed:
-  path: atom.xml
+#feed:
+ # path: atom.xml
 
 # Pagination - https://jekyllrb.com/docs/pagination/
 paginate: 10
@@ -65,6 +65,7 @@ exclude:
   - vendor/ruby/
   - /docs # ignore Basically Basic sample site
   - /example # ignore Basically Basic dev site
+  - /cv/
 
 # Front Matter Defaults
 defaults:
