--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,5 +1,5 @@
 # Theme Skin
-skin: default # default, night, plum, sea, soft, steel
+skin: steel # default, night, plum, sea, soft, steel
 
 # Theme Text
 t:
@@ -12,7 +12,7 @@ t:
   newer: "Newer"
   older: "Older"
   email: "Email"
-  subscribe: "Subscribe"
+  #subscribe: "Subscribe"
   read_more: "Read More"
   posts: "Posts"
   page: "Page"
